@@ -289,6 +289,7 @@
 	- python: typo in NOKEY exception string.
 	- fix: parse pgp packets more carefully.
 	- fix: parse header data more carefully.
+	- fix: register SIGCHLD handler before forking (#73134).
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
